# nn-Nov2025-CV-Projects-IT-

./: Readme.md
1-VideoAnalyzer-AgenticAI/: Readme.md
10-BlobCreator-AIAgent-CrewAI-GenAI/: Readme.md  app.py
11-MCPServerAgent-WeatherPredict-CrewAI-GenAI/: Readme.md
12-LoanApproval-Predict-ML/: Readme.md
13-SkinCancer-Detect-DL/: Readme.md
14-FakeNotes-Detect-DL/: Readme.md
15-NYC-DataAnalysis-AzureDE/: Readme.md
16-AdventureWorks-Sales-DataAnalysis-AzureDE/: Readme.md
17-Deploy-GenAI-GithubActions-ECS-LLMOPs/: Readme.md
18-Deploy-MedicalChatbot-AWS-LLMOPs/: Readme.md
19-Deploy-DL-AWS-Jenkins-mlflow-MLOPs/: Readme.md
2-ModularRAG-Chatbot-AgenticAI/: Readme.md
20-ObjectDetection-Yolov5-AWS-Azure-MLOPs/: README.md  Readme.md
21-Deploy-ML-Model-AWS-Azure-MLOPs/: Readme.md
22-Deploy-2TierWebApp-EKS-Devops/: Readme.md
23-Deploy-OpenAIChatbot-EKS-Devops/: Readme.md
24-Deploy-Netflix-GKE-Jenkins-Devops/: Readme.md
25-Deploy-Tetris-AKS-AzureDevops/: Readme.md
5-RAG-ShopAssistant-GenAI/ShopAssistantChatbot2.0-Sndev/: .env  README.md  main.py  pyproject.toml  requirements.txt  ui.py
5-RAG-ShopAssistant-GenAI/ShopAssistantChatbot2.0-Sndev/backend/: main.py
5-RAG-ShopAssistant-GenAI/ShopAssistantChatbot2.0-Sndev/backend/db/: mysql.py
5-RAG-ShopAssistant-GenAI/ShopAssistantChatbot2.0-Sndev/backend/routes/: chat.py  products.py
5-RAG-ShopAssistant-GenAI/ShopAssistantChatbot2.0-Sndev/backend/services/: gemini_chain.py  vector_store.py
5-RAG-ShopAssistant-GenAI/ShopAssistantChatbot2.0-Sndev/frontend/: app.py
(+32 files in other folders)
